--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
       <p class="centered">Activities</p>
     </a>
   </nav>
+
+  <img style="width: 100vw; height: 70vh; object-fit: cover;"src="imgs/Scioto_Mile_aerial_from_north.jpg" alt="Image of columbus">
+  <img src="imgs/columbus_logo_edited.png" alt="Columbus logo">
 </body>
 
 </html>
