large navbar construction

--- a/index.html
+++ b/index.html
@@ -20,34 +20,35 @@
 
 <body>
   <nav>
-    <a href="food.html">
-      <div class="navButton centered"><img src="imgs/icons/food.png" alt="Food icon"></div>
-      <p class="centered">Food</p>
-    </a>
-    <a>
-      <div class="navButton centered"><img src="imgs/icons/bus.png" alt="Bus icon"></div>
-      <p class="centered">Transport</p>
-    </a>
-    <a>
-      <div class="navButton centered"><img src="imgs/icons/entertainment.png" alt="Entertainment icon"></div>
-      <p class="centered">Entertainment</p>
-    </a>
-    <a>
-      <div class="navButton centered"><img src="imgs/icons/house.png" alt="House icon"></div>
+    <a href="index.html" class="navButton">
+      <div class="centered"><img src="imgs/icons/house.png" alt="House icon"></div>
       <p class="centered">Home</p>
     </a>
-    <a>
-      <div class="navButton centered"><img src="imgs/icons/map.png" alt="Map icon"></div>
+    <a href="food.html" class="navButton">
+      <div class="centered"><img src="imgs/icons/food.png" alt="Food icon"></div>
+      <p class="centered">Food</p>
+    </a>
+    <a class="navButton">
+      <div class="centered"><img src="imgs/icons/bus.png" alt="Bus icon"></div>
+      <p class="centered">Travel</p>
+    </a>
+    <a class="navButton">
+      <div class="centered"><img src="imgs/icons/entertainment.png" alt="Entertainment icon"></div>
+      <p class="centered">Fun</p>
+    </a>
+    <a class="navButton">
+      <div class="centered"><img src="imgs/icons/map.png" alt="Map icon"></div>
       <p class="centered">Map</p>
     </a>
-    <a>
-      <div class="navButton centered"><img src="imgs/icons/activities.png" alt="Activities icon"></div>
-      <p class="centered">Activities</p>
+    <a class="navButton">
+      <div class="centered"><img src="imgs/icons/activities.png" alt="Activities icon"></div>
+      <p class="centered">Activity</p>
     </a>
   </nav>
-
-  <img style="width: 100vw; height: 70vh; object-fit: cover;"src="imgs/Scioto_Mile_aerial_from_north.jpg" alt="Image of columbus">
-  <img src="imgs/columbus_logo_edited.png" alt="Columbus logo">
+<div style="width: 100vw; height: 70vh; overflow: hidden;">
+  <img id="Logo" src="imgs/columbus_logo_edited.png" alt="Columbus logo">
+  <img id="LogoBcg" style="width: 100vw; height: 70vh; object-fit: cover;"src="imgs/Scioto_Mile_aerial_from_north.jpg" alt="Image of columbus">
+</div>
 </body>
 
 </html>
