Navbar close to finished

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 </head>
 
 <body>
+  <a onclick="toggleNav()" id="navToggle">
+    <p class="centered">˅</p>
+  </a>
   <nav>
+    <p></p>
     <a href="index.html" class="navButton">
       <div class="centered"><img src="imgs/icons/house.png" alt="House icon"></div>
       <p class="centered">Home</p>
