navbar fully functional

--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 
   <link rel="stylesheet" href="grids.css">
   <script src="grids.js" defer></script>
-  <link rel="stylesheet" href="global.css">
+  <link rel="stylesheet" href="css/global.css">
   <script src="global.js" defer></script>
+  <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
   <a onclick="toggleNav()" id="navToggle">
-    <p class="centered">˅</p>
+    <p class="centered no-select">˅</p>
   </a>
   <nav>
     <p></p>
@@ -32,27 +33,34 @@
       <div class="centered"><img src="imgs/icons/food.png" alt="Food icon"></div>
       <p class="centered">Food</p>
     </a>
-    <a class="navButton">
+    <a href="travel.html" class="navButton">
       <div class="centered"><img src="imgs/icons/bus.png" alt="Bus icon"></div>
       <p class="centered">Travel</p>
     </a>
-    <a class="navButton">
+    <p></p>
+    <a href="fun.html" class="navButton">
       <div class="centered"><img src="imgs/icons/entertainment.png" alt="Entertainment icon"></div>
       <p class="centered">Fun</p>
     </a>
-    <a class="navButton">
+    <a href="map.html" class="navButton">
       <div class="centered"><img src="imgs/icons/map.png" alt="Map icon"></div>
       <p class="centered">Map</p>
     </a>
-    <a class="navButton">
+    <a href="activity.html" class="navButton">
       <div class="centered"><img src="imgs/icons/activities.png" alt="Activities icon"></div>
       <p class="centered">Activity</p>
     </a>
   </nav>
 <div style="width: 100vw; height: 70vh; overflow: hidden;">
   <img id="Logo" src="imgs/columbus_logo_edited.png" alt="Columbus logo">
-  <img id="LogoBcg" style="width: 100vw; height: 70vh; object-fit: cover;"src="imgs/Scioto_Mile_aerial_from_north.jpg" alt="Image of columbus">
+  <img id="LogoBcg" style="width: 100vw; height: 70vh; object-fit: cover;" src="imgs/Scioto+Greenways+47+Jazz+and+Rib.jpg" alt="Image of columbus">
 </div>
-</body>
 
+<div class="grid-column grid-100 grid-even">
+  <a href="" id="indexButton">h</a>
+  <a id="indexButton">i</a>
+  <a id="indexButton">o</a>
+</div>
+
+</body>
 </html>
