--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 </div>
 
 <div class="grid-column grid-100 grid-even">
-  <a href="" id="indexButton">h</a>
-  <a id="indexButton">i</a>
-  <a id="indexButton">o</a>
+  <a href="" id="indexButton"><p>h</p></a>
+  <a id="indexButton"><p>i</p></a>
+  <a id="indexButton"><p>o</p></a>
 </div>
 
 </body>
