--- a/travel.html
+++ b/travel.html
@@ -18,7 +18,7 @@
     <a onclick="toggleNav()" id="navToggle">
         <p class="centered no-select">˅</p>
       </a>
-    <nav>
+    <nav class="closed">
         <p></p>
         <a href="index.html" class="navButton">
           <div class="centered"><img src="imgs/icons/house.png" alt="House icon"></div>
