--- a/food.html
+++ b/food.html
@@ -7,8 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Food in Ohio</title>
 
-  <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
-
   <script
     type="importmap"> { "imports": { "three": "https://unpkg.com/three@0.151.3/build/three.module.js", "three/addons/": "https://unpkg.com/three@0.151.3/examples/jsm/" } }</script>
 
@@ -52,10 +50,20 @@
     </a>
   </nav>
 
-<div id="foodTitle">
-  <p class="padding"></p>
-  <h1 class="centered">Eat Local</h1>
-</div>
+  <div id="foodTitle">
+    <p class="padding"></p>
+    <h1 class="centered">Eat Local</h1>
+  </div>
 
+  <div id="cardHolder">
+    <div class="centered grid-90 grid-even" style="height: 100%;">
+      <div class="card">a</div>
+      <div class="card">a</div>
+      <div class="card">a</div>
+    </div>
+  </div>
+  
+  <script type="module" src="threejs/food.js" defer></script>
 </body>
+
 </html>
