fixes for grids.js

--- a/food.html
+++ b/food.html
@@ -56,7 +56,7 @@
   </div>
 
   <div id="cardHolder">
-    <div class="centered grid-90 grid-even" style="height: 100%;">
+    <div class="centered grid-90 grid-even mobile-vertical" style="height: 100%;">
       <div class="card">a</div>
       <div class="card">a</div>
       <div class="card">a</div>
