responsive three.js

--- a/food.html
+++ b/food.html
@@ -57,13 +57,14 @@
 
   <div id="cardHolder">
     <div class="centered grid-90 grid-even mobile-vertical" style="height: 100%;">
-      <div class="card">a</div>
-      <div class="card">a</div>
-      <div class="card">a</div>
+      <div><div class="centered card">Breakfast</div></div>
+      <div><div class="centered card">Lunch</div></div>
+      <div><div class="centered card">Dinner</div></div>
     </div>
   </div>
   
-  <script type="module" src="threejs/food.js" defer></script>
+  <script type="module" src="threejs/hamburger.js" defer></script>
+  <script type="module" src="threejs/taco.js"></script>
 </body>
 
 </html>
