--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <img id="LogoBcg" style="width: 100vw; height: 70vh; object-fit: cover;" src="imgs/Scioto+Greenways+47+Jazz+and+Rib.jpg" alt="Image of columbus">
 </div>
 
-<div class="no-overflow grid-column grid-100 grid-even">
+<div class="no-overflow grid-100 grid-even">
   <a href="map.html" id="indexButton" style="width: 33.333vw"><p>Explore Ohio</p></a>
   <a href="map.html" id="indexButton" style="width: 33.333vw"><p>Have Fun</p></a>
   <a href="food.html" id="indexButton" style="width: 33.333vw"><p>Eat!</p></a>
