--- a/food.html
+++ b/food.html
@@ -44,9 +44,9 @@
       <div class="centered"><img src="imgs/icons/map.png" alt="Map icon"></div>
       <p class="centered">Map</p>
     </a>
-    <a href="activity.html" class="navButton">
+    <a href="Credits.html" class="navButton">
       <div class="centered"><img src="imgs/icons/activities.png" alt="Activities icon"></div>
-      <p class="centered">Activity</p>
+      <p class="centered">Credits</p>
     </a>
   </nav>
 
@@ -57,7 +57,7 @@
 
   <div id="cardHolder">
     <div class="centered grid-90 grid-even mobile-vertical" style="height: 100%;">
-      <div><div class="centered card">Breakfast</div></div>
+      <div><div class="centered card"><h2 style="display:inline ">Breakfast</h2></div></div>
       <div><div class="centered card">Lunch</div></div>
       <div><div class="centered card">Dinner</div></div>
     </div>
@@ -65,6 +65,7 @@
   
   <script type="module" src="threejs/hamburger.js" defer></script>
   <script type="module" src="threejs/taco.js"></script>
+  <script type="module" src="threejs/croissant.js"></script>
 </body>
 
 </html>
