--- a/credits.html
+++ b/credits.html
@@ -2,10 +2,11 @@ Models:
 https://sketchfab.com/3d-models/japanese-bus-nagoya-city-bus-aichi-37c0a04a7aef4139b6aa037d17e768e5
 https://sketchfab.com/3d-models/taco-from-poly-by-google-6e790dbdc2db497c82e8e2379eba7a0c
 https://sketchfab.com/3d-models/hamburger-92f2f18d1546406a9f488344cc8f2407#download
-
+https://sketchfab.com/3d-models/croissant-ea9992f27d57427cb94944598bc83117#download
 
 Images:
 openclipart.org
 freeiconspng.com
 thenounproject.com
 flaticon.com
+simply-delicious-food.com
