google maps embed

--- a/map.html
+++ b/map.html
@@ -16,7 +16,7 @@
   <script src="global.js" defer></script>
 </head>
 
-<body>
+<body style="overflow: hidden;">
   <a onclick="toggleNav()" id="navToggle">
     <p class="centered no-select">˅</p>
   </a>
@@ -43,10 +43,13 @@
       <div class="centered"><img src="imgs/icons/map.png" alt="Map icon"></div>
       <p class="centered">Map</p>
     </a>
-    <a href="activity.html" class="navButton">
+    <a href="Credits.html" class="navButton">
       <div class="centered"><img src="imgs/icons/activities.png" alt="Activities icon"></div>
-      <p class="centered">Activity</p>
+      <p class="centered">Credits</p>
     </a>
   </nav>
+
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d195656.61280406688!2d-83.15563846310447!3d39.983097834292586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883889c1b990de71%3A0xe43266f8cfb1b533!2sColumbus%2C%20OH!5e0!3m2!1sen!2sus!4v1684327256051!5m2!1sen!2sus" style="width: 100vw; height:98.8vh; overflow: hidden;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 </body>
 </html>
