--- a/food.html
+++ b/food.html
@@ -57,9 +57,9 @@
 
   <div id="cardHolder">
     <div class="centered grid-90 grid-even mobile-vertical" style="height: 100%;">
-      <div><div class="centered card"><h2 style="display:inline ">Breakfast</h2></div></div>
-      <div><div class="centered card">Lunch</div></div>
-      <div><div class="centered card">Dinner</div></div>
+      <a href="food/breakfast.html"><div class="centered card"><h2>Breakfast</h2></div></a>
+      <a href="food/lunch.html"><div class="centered card"><h2>Lunch</h2></div></a>
+      <a href="food/dinner.html"><div class="centered card"><h2>Dinner</h2></div></a>
     </div>
   </div>
   
