food pages DONE

--- a/food.html
+++ b/food.html
@@ -50,7 +50,7 @@
     </a>
   </nav>
 
-  <div id="foodTitle">
+  <div id="Title">
     <p class="padding"></p>
     <h1 class="centered">Eat Local</h1>
   </div>
