--- a/travel.html
+++ b/travel.html
@@ -45,6 +45,11 @@
         </a>
       </nav>
 
+      <div id="Title">
+        <p class="padding"></p>
+        <h1 class="centered">Travel</h1>
+      </div>
+
     <script type="module" src="threejs/bus.js" defer></script>
 </body>
 </html>
