lots of json cards

--- a/travel.html
+++ b/travel.html
@@ -50,6 +50,11 @@
         <h1 class="centered">Travel</h1>
       </div>
 
+    <div id="busLocation"></div>
     <script type="module" src="threejs/bus.js" defer></script>
+
+    <h2 class="centered">How to get around</h2>
+    <div id="jsonCardHolder"></div>
+    <script src="travel.js"></script>
 </body>
 </html>
