background on credits

--- a/credits.html
+++ b/credits.html
@@ -16,7 +16,10 @@
   <script src="global.js" defer></script>
 </head>
 
-<body>
+<body style="background: var(--blue);
+background: linear-gradient(180deg, var(--lightBlue) 0%, var(--blue) 100%);
+background-repeat: no-repeat;
+background-attachment: fixed;">
   <a onclick="toggleNav()" id="navToggle">
     <p class="centered no-select">˅</p>
   </a>
